<resources>
    <string name="app_name">IVerbs</string>
    <string name="NVersion">Versión 1.0</string>
    <string name="Disenador">Jorge Soto R.</string>

    <string name="DatosMenu1">Lista de verbos</string>
    <string name="DatosMenu2">Estudiar</string>
    <string name="DatosMenu3">Examen</string>

    <string name="ListVerbBuscar">Buscar...</string>

    <string name="Ejemplo">Ejemplo:</string>

    <string name="Presente">Infinitivo</string>
    <string name="Pasado">Pasado</string>
    <string name="PasadoParticipio">Participio</string>

    <string name="Mensaje1">¡No se han encontrado coincidencia..!</string>
    <string name="app_back_pressed_exit">Pulse de nuevo para salir.</string>

    <string name="mensaje_salir_test">Desea abandonar la prueba.</string>

    <string name="Pregunta_Infi">Cual es el INFINITIVO del verbo?</string>
    <string name="Pregunta_Pasado">Cual es el PASADO del verbo?</string>
    <string name="Pregunta_PParticipio">Cual es el PASADO PARTICIPIO del verbo?</string>

    <string name="text_aceptar">Aceptar</string>
    <string name="text_cancelar">Cancelar</string>

    <string name="Respuesta">Respuesta...</string>

    <string name="title_activity_test_1">Test_1</string>
    <string name="title_activity_test">Test</string>
    <string name="prueba_completado">Prueba completado</string>
    <string name="fallos">Fallos</string>
    <string name="aciertos">Aciertos</string>
    <string name="comprobar">Comprobar</string>
    <string name="titulo_test1">Preguntas Correctas</string>
    <string name="MSN_correctaPregunta">Muy Bien!</string>
    <string name="MSN_FinalPrueba">Prueba Finalizada!</string>
    <string name="MSN_PreguntaIncorrecta">La respuesta no es correcta!</string>
    <string name="MSN_RespuestaVacia">La respuesta esta vacia..</string>
    <string name="palabras_mas_falladas">Palabras mas falladas</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
