<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f13b68aa">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/listverbslayout">

        <TextView
            android:id="@+id/textotitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prueba_completado"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="#3b68aa"
            android:textStyle="bold|italic"
            android:textSize="30sp"
            app:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <ImageView
            android:id="@+id/imagefortestcomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textotitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/textComprobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagefortestcomplete"
            android:layout_centerHorizontal="true"
            android:text="¡Has Aprobado!"
            android:layout_marginTop="5dp"
            android:textColor="#3b68aa"
            android:textStyle="bold|italic"
            android:textSize="22sp"
            app:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <LinearLayout
            android:id="@+id/contenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/marcopreguntas"
            android:layout_below="@+id/textComprobar"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textaciertos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/aciertos"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:textColor="#ec8e1d"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                    android:id="@+id/numeroaciertos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Numero"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="#3b68aa"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textfallos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/fallos"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:textColor="#ec8e1d"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                    android:id="@+id/numerofallos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Numero"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="#3b68aa"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textnpreguntas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Numero de preguntas"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:textColor="#ec8e1d"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                    android:id="@+id/numeronpreguntas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Numero"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="#3b68aa"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textporcentajeaciertos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Procentaje de acierto"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:textColor="#ec8e1d"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                    android:id="@+id/numeroporcentajeacierto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Porcentaje"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="#3b68aa"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textlistwrongword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/contenedor"
            android:layout_marginLeft="15dp"
            android:text="Palabras falladas"
            android:textSize="16sp"
            android:textColor="#3b68aa"
            android:textStyle="bold|italic"
            app:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <ListView
            android:id="@+id/listwrongword"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_below="@id/textlistwrongword"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/buttonexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_below="@id/listwrongword"
            android:layout_alignParentRight="true" />

    </RelativeLayout>
</RelativeLayout>