<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="just_jump.iverbs.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3b68aa">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/B_ListaVerbos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/DatosMenu1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#3b68aa"
                android:textStyle="bold|italic"
                app:fontFamily="sans-serif-condensed" />

            <Button
                android:id="@+id/B_Examen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/B_ListaVerbos"
                android:layout_alignStart="@+id/B_ListaVerbos"
                android:layout_alignLeft="@+id/B_ListaVerbos"
                android:layout_alignEnd="@+id/B_ListaVerbos"
                android:layout_alignRight="@+id/B_ListaVerbos"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/DatosMenu3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#3b68aa"
                android:textStyle="bold|italic"
                app:fontFamily="sans-serif-condensed" />

            <LinearLayout
                android:id="@+id/contenedortitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="15dp"
                android:layout_below="@id/B_Examen">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:textAlignment="center"
                    android:layout_below="@+id/B_Examen"
                    android:text="@string/palabras_mas_falladas"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/B_Examen"
                    android:layout_alignParentEnd="true"
                    android:text="Palabras usadas"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    app:fontFamily="sans-serif-condensed" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Contenerdortablas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_below="@id/contenedortitulo">

                <ListView
                    android:id="@+id/Lista_mFallados"
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:layout_weight="50"
                    android:layout_below="@+id/text1"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/listverbslayout_button" />

                <ListView
                    android:id="@+id/Lista_menosFallados"
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:layout_weight="50"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/text1"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/listverbslayout_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Contenedormas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/Contenerdortablas">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/ic_mas"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ver mas.."
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        app:fontFamily="sans-serif-condensed"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/ic_mas"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ver mas.."
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        app:fontFamily="sans-serif-condensed"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/Contenedormas"
                android:background="@drawable/listverbslayout_button">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="30"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    app:srcCompat="@drawable/ic_icono3" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="40"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    app:srcCompat="@drawable/ic_icono1" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="30"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    app:srcCompat="@drawable/ic_icono2" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>